--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       <div class="row">
         <div class="col-md-4 mb-4">
           <div class="card h-100">
-            <img src="/img/6.jpg" class="card-img-top img-fluid" alt="Affordable Laptop Backpack for Students">
+            <img src="img/6.jpg" class="card-img-top img-fluid" alt="Affordable Laptop Backpack for Students">
             <div class="card-body">
               <h3 class="card-title">Affordable Backpack for Students</h3>
               <p class="card-text">Perfect for university students, this backpack is lightweight and comes with multiple compartments.</p>
@@ -177,7 +177,7 @@
         </div>
         <div class="col-md-4 mb-4">
           <div class="card h-100">
-            <img src="/img/5.jpg" class="card-img-top img-fluid" alt="Stylish Laptop Backpack for Professionals">
+            <img src="img/5.jpg" class="card-img-top img-fluid" alt="Stylish Laptop Backpack for Professionals">
             <div class="card-body">
               <h3 class="card-title">Stylish Backpack for Professionals</h3>
               <p class="card-text">Designed for office use, this backpack features a sleek design and anti-theft zippers.</p>
@@ -187,7 +187,7 @@
         </div>
         <div class="col-md-4 mb-4">
           <div class="card h-100">
-            <img src="/img/10.png" class="card-img-top img-fluid" alt="Durable Laptop Backpack for Travel">
+            <img src="img/10.png" class="card-img-top img-fluid" alt="Durable Laptop Backpack for Travel">
             <div class="card-body">
               <h3 class="card-title">Durable Backpack for Travel and Trip</h3>
               <p class="card-text">Ideal for travelers, this backpack is waterproof and has a USB charging port.</p>
