--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Discover the best laptop backpacks in Pakistan for 2025! Explore affordable, durable, and stylish options for students, professionals, and travelers.">
   <meta name="keywords" content="best laptop backpacks in Pakistan, affordable laptop backpacks, durable laptop backpacks, stylish laptop backpacks, laptop backpacks for students, laptop backpacks for professionals">
   <meta name="author" content="Your Name">
+  <meta name="google-site-verification" content="R_00SeCsBvwLYzPRZisyeVAqChZD1JJfXWcjt_YioXc" />
   <title>Best Laptop Backpacks in Pakistan 2025: Affordable, Durable, and Stylish Options</title>
 
   <!-- Bootstrap CSS -->
